# blog_api

./: manage.py  pyproject.toml
blog_api/: settings.py
