[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = ""
authors = ["Sergey Golobokov <sergeygolobokov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djoser = "^2.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
