[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = ""
authors = ["Sergey Golobokov <sergeygolobokov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djoser = "^2.3.1"
django-rest-framework = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
